[metadata]
name = app
version = 0.0.1
author = david graff
author_email = deg711@g.harvard.edu
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
url = https://github.com/coleygroup/aspire-context
platforms = Linux, Mac OS-X, Unix

[options]
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
	fastapi
	numpy
	pydantic
	rdkit
	scipy
	tensorflow >= 2.0

[options.extras_require]
dev =
	black
	bumpversion
	flake8
	pytest
	pytest-cov
test =
	pytest
	pytest-cov
